Modal insertar Score_m

--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -54,7 +54,7 @@
 
               <button
                 type="button"
-                class="cli-btn btn-blue-light"
+                class="cli-btn btn-mora-light"
                 style="border-radius: 2px; padding: 0.225rem 0.75rem"
                 (click)="cargarOBuscarScore()"
                 ><mat-icon class="icon-18">search</mat-icon>
@@ -64,22 +64,15 @@
           </form>
       </div>
 
-      <!-- BOTON MODAL PARA CREAR EVENTOS ----------------------------------------------------->
+      <!-- BOTON MODAL PARA CREAR SCORE ----------------------------------------------------->
       <div style="display: flex" class="mt-4 mb-1">
-          <!-- <button
+          <button
             class="cli-btn btn-blue"
             style="margin: 0"
             type="button"
-            (click)="crearEvento()"
+            (click)="CrearScore_M()"
             ><mat-icon class="icon-18">add</mat-icon>Agregar Score
-          </button> -->
-
-          <!-- <button
-            matTooltip="Descargar evento"
-            class="icon-btn btn-trans c-green-export mx-1"
-            (click)="exportarRegistro()"
-            ><mat-icon class="icon-18">file_download</mat-icon>Exportar
-          </button> -->
+          </button>
 
         <div class="flex-1"></div>
         <div class="mt-2" style="color: #bb96ff; font-weight: 600;">
@@ -164,3 +157,5 @@
     </div>
   </div>
 </div>
+
+
