--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -71,7 +71,7 @@
             style="margin: 0"
             type="button"
             (click)="CrearScore_M()"
-            ><mat-icon class="icon-18">add</mat-icon>Agregar Score
+            ><mat-icon class="icon-18">add</mat-icon>Agregar Solcitud
           </button>
 
         <div class="flex-1"></div>
@@ -117,7 +117,7 @@
 
                   <button matTooltip ="Descargar"
                     class="icon-btn btn-trans c-green-export"
-                    (click)="exportarRegistro()"
+                    (click)="exportarRegistro(score.idScoreM)"
                     ><mat-icon class="icon-13">file_download</mat-icon>
                   </button>
                 </div>
