--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -12,7 +12,7 @@
   <div class="cli-form newvac-wrapper">
     <div class="chart-draw">
       <!-- DATOS DEL EVENTO ------------------------------------------------------------------------->
-    <div style="display: flex" >
+    <div style="display: flex" *ngIf="DATA_SCORE">
       <div class="pr-subtitle mt-2">Datos del Score</div>
       <div class="flex-1"></div>
       <div  class="id-score">ID : <span  class="total">{{score_Id}}</span></div>
@@ -25,10 +25,10 @@
               <label>Solicitante</label>
               <input
                 type="text"
+                readonly="true"
                 class="form-control cli-input-white"
                 formControlName="solicitante"/>
               </div>
-              <!-- readonly="true" -->
 
             <div class="col-sm-3 cli-form-element">
               <label>Envío</label>
@@ -37,6 +37,7 @@
                 <option [value]= 0 >Individual</option>
                 <option [value]= 1 >Masivo</option>
               </select>
+              <small class="form-text text-alert" *ngIf="campoNoValido('id_envio')">* Selecione el Envío es obligatorio</small>
             </div>
 
             <div class="col-sm-3 cli-form-element" *ngIf="DATA_SCORE">
@@ -47,24 +48,32 @@
               </select>
             </div>
 
-            <div class="col-sm-3 cli-form-element">
+            <!-- <div class="col-sm-3 cli-form-element">
               <label class="form-label">Fecha de Solcitud</label>
               <mat-form-field appearance="outline">
                 <input matInput [matDatepicker]="picker_fs" formControlName="fecha_solicitud" >
-                <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
                 <mat-datepicker-toggle matSuffix [for]="picker_fs"></mat-datepicker-toggle>
                 <mat-datepicker #picker_fs></mat-datepicker>
               </mat-form-field>
+            </div> -->
+
+            <div class="col-sm-3 cli-form-element">
+              <label class="form-label">Fecha Envío</label>
+              <mat-form-field appearance="outline">
+                <input matInput [matDatepicker]="picker_fe" formControlName="fecha_envio" >
+                <mat-datepicker-toggle matSuffix [for]="picker_fe"></mat-datepicker-toggle>
+                <mat-datepicker #picker_fe></mat-datepicker>
+              </mat-form-field>
+              <small class="form-text text-alert" *ngIf="campoNoValido('fecha_envio')">* Indique la fecha de Envío es obligatorio</small>
             </div>
 
-              <!-- <div class="col-sm-3 cli-form-element" *ngIf="DATA_SCORE">
-                <label class="form-label">Fecha Envío</label>
-                <mat-form-field appearance="outline">
-                  <input matInput [matDatepicker]="picker_fe" formControlName="fecha_envio" >
-                  <mat-datepicker-toggle matSuffix [for]="picker_fe"></mat-datepicker-toggle>
-                  <mat-datepicker #picker_fe></mat-datepicker>
-                </mat-form-field>
-              </div> -->
+            <div class="col-sm-3 cli-form-element" *ngIf="DATA_SCORE">
+              <label>Importar</label>
+              <input type="file"
+              (change)="readExcell($event)">
+            </div>
+            <!-- value="" -->
+
           </div>
         </div>
       </div>
@@ -164,24 +173,34 @@
                         </tr>
                       </thead>
 
+                      <!-- CAPACIDADFINANCIAMIENTO: 300
+                      CARGOFIJOMAXIMO: 200
+                      COD.FINANCIAMIENTO: 5
+                      FECHAPROCESO:44966
+                      Financiamiento:0
+                      N°DOCUMENTO:"222107360"
+                      OBSERVACIONES:"CEXparapruebasdebidoalamodalidaddecampañayscore"
+                      QLINEAS:0
+                      SCORE:2709
+                      Segmento:"Móvil"
+                      TIPODOCUMENTO:"CEX" -->
                       <tbody>
                         <tr
-                          *ngFor="let score of listScoreDetalle | paginate: {
+                          *ngFor="let score of scorelData | paginate: {
                                     itemsPerPage: pageSize,
                                     id: 'score',
                                     currentPage: page,
                                     totalItems: totalScore }">
-
-                          <td style="min-width: 90px;">{{ score.idScored }}</td>
+                          <td style="min-width: 90px;">{{ score.CAPACIDADFINANCIAMIENTO }}</td>
                           <!-- <td style="min-width: 80px;">{{ score.idscore }}</td> -->
-                          <td style="min-width: 80px;">{{ score.tipo_documento }}</td>
-                          <td style="min-width: 100px;">{{ score.numero_documento }}</td>
-                          <td>{{ score.segmento }}</td>
+                          <td style="min-width: 80px;">{{ score.CARGOFIJOMAXIMO }}</td>
+                          <td style="min-width: 100px;">{{ score.NDOCUMENTO}}</td>
+                          <td>{{ score.FECHAPROCESO }}</td>
                           <td class="w100">{{ score.score }}</td>
-                          <td style="min-width: 150px;">{{ score.nombres | uppercase }}</td>
-                          <td style="min-width: 85px;">{{ score.q_lineas }}</td>
-                          <td style="min-width: 90px;">{{ score.codigo_fin }}</td>
-                          <td style="min-width: 90px;">{{ score.idrequerimiento }}</td>
+                          <td style="min-width: 150px;">{{ score.SCORE }}</td>
+                          <td style="min-width: 85px;" >{{ score.QLINEAS }}</td>
+                          <td style="min-width: 90px;" >{{ score.Segmento }}</td>
+                          <td style="min-width: 90px;" >{{ score.TIPODOCUMENTO }}</td>
 
                           <td style="min-width: 118px;">
                             <span *ngIf="score.estado == 'Solicitado'"       class="label estado-compl"> {{ score.estado | uppercase }}</span>
@@ -199,14 +218,56 @@
                                   class="btn-obs btn-obs-color"
                                   style="margin: 0"
                                   type="button"
+                                  (click)="asignarVacaciones()"
                                   matTooltip="Actualizar"
                                   ><mat-icon class="icon-13">loupe</mat-icon>
-                                </button>{{ score.observacion }}
+                                </button>{{ score.OBSERVACIONES }}
                                 <!-- (click)="CrearScore_M()" -->
                             </div>
                             </ng-container>
                           </td>
                         </tr>
+
+                        <!-- <tr
+                        *ngFor="let score of listScoreDetalle | paginate: {
+                                  itemsPerPage: pageSize,
+                                  id: 'score',
+                                  currentPage: page,
+                                  totalItems: totalScore }">
+                        <td style="min-width: 90px;">{{ score.idScored }}</td>
+                        <td style="min-width: 80px;">{{ score.tipo_documento }}</td>
+                        <td style="min-width: 100px;">{{ score.numero_documento }}</td>
+                        <td>{{ score.segmento }}</td>
+                        <td class="w100">{{ score.score }}</td>
+                        <td style="min-width: 150px;">{{ score.nombres | uppercase }}</td>
+                        <td style="min-width: 85px;" >{{ score.q_lineas }}</td>
+                        <td style="min-width: 90px;" >{{ score.codigo_fin }}</td>
+                        <td style="min-width: 90px;" >{{ score.idrequerimiento }}</td>
+
+                        <td style="min-width: 118px;">
+                          <span *ngIf="score.estado == 'Solicitado'"       class="label estado-compl"> {{ score.estado | uppercase }}</span>
+                          <span *ngIf="score.estado == 'Usuario Ináctivo'" class="label estado-planif">{{ score.estado | uppercase }}</span>
+                          <span *ngIf="score.estado == 'No existe LB'"     class="label estado-pend "> {{ score.estado | uppercase }}</span>
+                        </td>
+
+                        <td style="min-width: 110px">{{ score.fecha_proceso }}</td>
+                        <td class="w100">{{ score.solicitante }}</td>
+                        <td style="min-width: 110px;">{{ score.cargo_fijo_max }}</td>
+                        <td class="obs-score">
+                          <ng-container *ngIf="score.estado != 'Solicitado'">
+                            <div style="display: flex">
+                              <button
+                                class="btn-obs btn-obs-color"
+                                style="margin: 0"
+                                type="button"
+                                (click)="asignarVacaciones()"
+                                matTooltip="Actualizar"
+                                ><mat-icon class="icon-13">loupe</mat-icon>
+                              </button>{{ score.observacion }}
+                          </div>
+                          </ng-container>
+                        </td>
+                      </tr> -->
                       </tbody>
                     </table>
 
@@ -338,3 +399,5 @@
     </div>
   </div>
 </form>
+
+
