--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -34,6 +34,13 @@
   }
 }
 
+.text-alert {
+  font-size: 10px;
+  color: #f66d7a;
+  margin-top: 0;
+}
+
+
 .total {
   color: #97999b;
 }
@@ -176,6 +183,10 @@
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
   padding: 0em 0 0.5em 0;
+}
+
+::ng-deep .mat-form-field-wrapper {
+  padding-bottom: 0.015em;
 }
 
 @media (max-width: 768px) {
