Login acceso - modal score_d

--- a/src/app/views/pages/mantenimiento/entidad/entidad.component.html
+++ b/src/app/views/pages/mantenimiento/entidad/entidad.component.html
@@ -93,7 +93,7 @@
               </td>
               <td class="w90">{{ entidad.id_tabla }}</td>
               <td class="w90">{{ entidad.id_correlativo }}</td>
-              <td style="min-width:250px; text-align: left;">{{ entidad.valor_texto_1 }}</td>
+              <td style="min-width:250px; text-align: left;">{{ entidad.nombre }}</td>
               <td style="text-align: left">{{ entidad.descripcion }}</td>
               <!-- <td>{{ entidad.nombrePadre | firstCapital }}</td> -->
             </tr>
