--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -121,9 +121,9 @@
 
 .buscar {
   border-radius: 2px;
-  font-weight: 500;
+  // font-weight: 500;
   padding: 5px;
-  border: 0.5px solid #e1e1e2;
+  // border: 0.5px solid #e1e1e2;
 }
 
 .form-select {
