--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -78,9 +78,22 @@
   }
 }
 
+// .info {
+//   align-items: center;
+//   justify-content: center;
+//   height: 20px;
+//   font-size: 15px;
+// }
+
+.cli-user{
+  display: flex;
+  align-items: center;
+  color: #0d6efd;
+  background: #f4f4f4;
+}
+
 .label {
   // padding: 3px 10px;
-
   padding: 2px 6px;
   line-height: 13px;
   color: #fff;
@@ -96,12 +109,12 @@
 
 .estado-compl {
   background-color: #88f5d4;
-  color: #8c8a8a;
+  color: #6f42c1;
 }
 
 .estado-planif {
   background-color: #ffdc73;
-  color: #8c8a8a;
+  color: #6f42c1;
 }
 
 .estado-pend {
@@ -116,7 +129,23 @@
   display: flex;
   align-items: center;
   border: solid 1px #bb96ff;
+}
 
+.input-group-text {
+  background-color: #ffffff;
+  border: none;
+  padding: 0.5px 5px;
+}
+
+.version {
+  font-size: 12px;
+  text-align: center;
+  font-weight: 500;
+  color: #20c997;
+  /* border: solid 0.5px var(--bs-teal); */
+  /* border-radius: 2px; */
+  /* background: #f0f5fa; */
+  padding: 1px;
 }
 
 .buscar {
