Servicio guardar importacion score detalle

--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -130,9 +130,9 @@
               <td class="w100">{{ score.envio }}</td>
               <!-- <td class="w100">{{ score.carga }}</td> -->
               <td>{{ score.estado}}</td>
-              <td>{{ score.fecha_crea }}</td>
-              <td>{{ score.Actualiza }}</td>
-              <td style="min-width: 95px">{{ score.fecha_actualizacion }}</td>
+              <td style="min-width: 95px;">{{ score.fecha_crea }}</td>
+              <td style="min-width: 100px;">{{ score.Actualiza }}</td>
+              <td style="min-width: 115px">{{ score.fecha_actualizacion }}</td>
             </tr>
           </tbody>
         </table>
