--- a/src/app/views/pages/score/registro-score/modal-score/asignar-observacion/asignar-observacion.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/asignar-observacion/asignar-observacion.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex">
   <div class="flex-1"></div>
-  <div class="modal-title c-male"> {{DATA_SCORE && DATA_SCORE.isCreation ? 'Editar': 'Actualizar'}} Score</div>
+  <div class="modal-title c-male"> Actualizar observación</div>
   <div class="flex-1"></div>
 
   <button (click)="close()" class="icon-btn btn-trans c-orange moda-close-btn">
@@ -15,7 +15,7 @@
         <div class="pr-module-container">
           <div class="row g-3">
 
-            <!-- <div class="col-sm-6 cli-form-element" *ngIf="DATA_SCORE.isCreation">
+            <!-- <div class="col-sm-6 cli-form-element" *ngIf="DATA_SCORE_DET.isCreation">
               <label>Estado</label>
               <select class="cli-input-white" formControlName="id_estado_d">
                 <option [value]="0" disabled>- Seleccione -</option>
@@ -32,16 +32,16 @@
               </mat-form-field>
             </div> -->
 
-
             <div class="cli-form-element mb-2">
-              <label>Obervaciones</label>
+              <label>Obervación</label>
               <textarea
                 class="form-control"
                 style="background-image: none; border-color: #bdbdbd; font-size: 12px;"
                 rows="3"
-                placeholder="Escriba algún Comentario de sobre la solicitud del score..."
-                formControlName="observaciones">
+                placeholder="Escriba alguna observación sobre la solicitud del score..."
+                formControlName="observacion">
               </textarea>
+              <small class="form-text text-alert" *ngIf="campoNoValido('observacion')">* Describa la Observación es obligatorio</small>
             </div>
           </div>
         </div>
@@ -55,8 +55,8 @@
       <button
         class="cli-btn btn-m btn-blue"
         [disabled]="asigObservacionForm.invalid"
-        (click)="agregarOactualizarPeriodo()">
-        <mat-icon class="icon-18">save</mat-icon> {{titleBtn}}
+        (click)="actualizarObservacion()">
+        <mat-icon class="icon-18">save</mat-icon> Actualizar
       </button>
     </div>
   </div>
