--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -180,7 +180,7 @@
                               <!-- <th>ID Score DET</th> -->
                               <th>ID Score</th>
                               <th>Tipo Doc</th>
-                              <th>N° Documento</th>
+                              <th>N° Doc</th>
                               <th>Segmento</th>
                               <th>Score</th>
                               <th>Nombres Apell.</th>
@@ -196,8 +196,8 @@
                           </thead>
 
                           <tbody>
-                            <!-- <tr
-                              *ngFor="let score of scorelData | paginate: {
+                            <tr
+                              *ngFor="let score of scoreData | paginate: {
                                         itemsPerPage: pageSize,
                                         id: 'score',
                                         currentPage: page,
@@ -228,16 +228,16 @@
                                       class="btn-obs btn-obs-color"
                                       style="margin: 0"
                                       type="button"
-                                      (click)="asignarObservacion()"
+                                      (click)="asignarObservacion(score)"
                                       matTooltip="Actualizar"
                                       ><mat-icon class="icon-13">loupe</mat-icon>
                                     </button>{{ score.OBSERVACIONES }}
                                 </div>
                                 </ng-container>
                               </td>
-                            </tr> -->
+                            </tr>
 
-                            <tr
+                            <!-- <tr
                             *ngFor="let score of listScoreDetalle | paginate: {
                                       itemsPerPage: pageSize,
                                       id: 'score',
@@ -261,22 +261,22 @@
 
                             <td style="min-width: 110px">{{ score.fecha_proceso }}</td>
                             <td class="w100">{{ score.solicitante }}</td>
-                            <td style="min-width: 110px;">{{ score.cargo_fijo_max }}</td>
+                            <td style="min-width: 120px;">{{ score.cargo_fijo_max }}</td>
                             <td class="obs-score">
-                              <ng-container *ngIf="score.estado != 'Solicitado'">
+                              <ng-container *ngIf="score.estado != 'Solicitado123333333333'">
                                 <div style="display: flex">
                                   <button
                                     class="btn-obs btn-obs-color"
                                     style="margin: 0"
                                     type="button"
-                                    (click)="asignarObservacion()"
+                                    (click)="asignarObservacion(score)"
                                     matTooltip="Actualizar"
                                     ><mat-icon class="icon-13">loupe</mat-icon>
                                   </button>{{ score.observacion }}
                               </div>
                               </ng-container>
                             </td>
-                          </tr>
+                          </tr> -->
                           </tbody>
                         </table>
 
