--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -92,7 +92,7 @@
               <th>Solicitante</th>
               <th>Fecha Solic.</th>
               <th>Fecha Envío</th>
-              <th>F. Envío</th>
+              <th>H. Envío</th>
               <!-- <th>Carga </th> -->
               <th>Estado</th>
               <th>Fecha Creación</th>
