--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,8 +10,10 @@
   </div>
   <div class="header-nav-items"></div>
   <div class="row">
-    <div class="personname" style="color: #555555">
+    <div class="col-sm-12 personname" style="color: #555555">
       {{ currentUser | uppercase }}
+      <br>
+      <div class="cli-rol col-sm-12 cli-btn" style="font-size: 12px; font-weight: 400; margin-top: -11px;"><mat-icon class="icon-13">person</mat-icon> {{rolUser}}</div>
     </div>
   </div>
   <app-user-section [photouri]="phtouri" [nameini]="nameini"></app-user-section>
