Validaciones rolname - header

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-12 personname" style="color: #555555">
       {{ currentUser | uppercase }}
       <br>
-      <div class="cli-rol col-sm-12 cli-btn" style="font-size: 12px; font-weight: 400; margin-top: -11px;"><mat-icon class="icon-13">person</mat-icon> {{rolUser}}</div>
+      <div class="cli-rol col-sm-12 cli-btn" style="font-size: 12px; font-weight: 400; margin-top: -11px;"><mat-icon class="icon-13">person</mat-icon> {{userRolName}}</div>
     </div>
   </div>
   <app-user-section [photouri]="phtouri" [nameini]="nameini"></app-user-section>
