--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -110,6 +110,7 @@
                       <div class="col-sm-3 cli-form-element" *ngIf="DATA_SCORE">
                         <label>Importar</label>
                         <input type="file"
+                        formControlName="importar"
                         (change)="readExcell($event)">
                       </div>
 
