Fecha procesos corregido - login swall

--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -277,7 +277,7 @@
 
       <!-- COMENTARIOS U OBSERVACION ------------------------------------------------------------------------->
       <ng-container *ngIf="DATA_SCORE">
-        <div class="pr-subtitle mt-1">Observación</div>
+        <div class="pr-subtitle mt-1">Comentatios</div>
         <div class="pr-section mb-3">
           <div class="pr-module-container">
             <div class="row">
