--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -28,14 +28,14 @@
       <div class="pr-section mb-3">
         <div class="pr-module-container">
           <div class="row g-2">
-              <!-- <div class="col-sm-3 cli-form-element">
+              <div class="col-sm-3 cli-form-element" *ngIf="!DATA_SCORE">
               <label>Solicitante</label>
               <input
                 type="text"
                 readonly="true"
                 class="form-control cli-input-white"
                 formControlName="solicitante"/>
-              </div> -->
+              </div>
 
               <div class="col-sm-3 cli-form-element">
                 <label>H. Envío</label>
@@ -62,15 +62,6 @@
                   <option [value]="estado.idEstado"*ngFor="let estado of listEstado">{{ estado.cNombre }}</option>
                 </select>
               </div>
-
-            <!-- <div class="col-sm-3 cli-form-element">
-              <label>Carga Arch.</label>
-              <select class="cli-input-white" formControlName="id_carga">
-                <option [value]="0" disabled>- Seleccione -</option>
-                <option [value]="carga.id_correlativo" *ngFor="let carga of listCargaArchivo">{{ carga.valor_texto_1 }}</option>
-              </select>
-              <small class="form-text text-alert" *ngIf="campoNoValido('id_carga')">* Selecione el tipo de carga es obligatorio</small>
-            </div> -->
 
             <!-- <div class="col-sm-3 cli-form-element">
               <label class="form-label">Fecha de Solcitud</label>
@@ -107,7 +98,10 @@
                   <div class="buscar">
                     <div class="row ">
 
-                      <div class="col-sm-3 cli-form-element" *ngIf="DATA_SCORE">
+                      <div class="col-sm-3 cli-form-element" *ngIf="DATA_SCORE
+                          &&  scoreForm.controls['id_estado_m'].value == 1
+                          ||  scoreForm.controls['id_estado_m'].value == 4"
+                          >
                         <label>Importar</label>
                         <input type="file"
                         formControlName="importar"
@@ -135,7 +129,6 @@
                         <label class="form-label">Fecha Proceso</label>
                         <mat-form-field appearance="outline">
                           <input matInput [matDatepicker]="picker_p" formControlName="fecha_proceso" >
-                          <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
                           <mat-datepicker-toggle matSuffix [for]="picker_p"></mat-datepicker-toggle>
                           <mat-datepicker #picker_p></mat-datepicker>
                         </mat-form-field>
@@ -184,7 +177,7 @@
                               <th>N° Doc</th>
                               <th>Segmento</th>
                               <th>Score</th>
-                              <th>Nombres Apell.</th>
+                              <!-- <th>Nombres Apell.</th> -->
                               <th>Q Lineas</th>
                               <th>Cód. Financ.</th>
                               <th>ID REQ.</th>
@@ -192,7 +185,7 @@
                               <th>Fecha Proceso</th>
                               <th>Solicitante</th>
                               <th>Cargo Fijo Máx.</th>
-                              <th>Observ.</th>
+                              <th>Observación.</th>
                             </tr>
                           </thead>
 
@@ -208,7 +201,7 @@
                             <td style="min-width: 100px;">{{ score.numero_documento }}</td>
                             <td>{{ score.segmento }}</td>
                             <td class="w100">{{ score.score }}</td>
-                            <td style="min-width: 150px;">{{ score.nombres | uppercase }}</td>
+                            <!-- <td style="min-width: 150px;">{{ score.nombres | uppercase }}</td> -->
                             <td style="min-width: 85px;" >{{ score.q_lineas }}</td>
                             <td style="min-width: 90px;" >{{ score.codigo_fin }}</td>
                             <td style="min-width: 90px;" >{{ score.idrequerimiento }}</td>
@@ -220,7 +213,7 @@
                             </td>
 
                             <td style="min-width: 110px">{{ score.fecha_proceso }}</td>
-                            <td class="w100">{{ score.solicitante }}</td>
+                            <td style="min-width: 200px;">{{ score.solicitante }}</td>
                             <td style="min-width: 120px;">{{ score.cargo_fijo_max }}</td>
                             <td class="obs-score">
                               <ng-container *ngIf="score.estado != 'Solicitado123333333333'">
@@ -277,7 +270,7 @@
 
       <!-- COMENTARIOS U OBSERVACION ------------------------------------------------------------------------->
       <ng-container *ngIf="DATA_SCORE">
-        <div class="pr-subtitle mt-1">Comentatios</div>
+        <div class="pr-subtitle mt-1">Comentarios</div>
         <div class="pr-section mb-3">
           <div class="pr-module-container">
             <div class="row">
@@ -286,7 +279,7 @@
                   class="form-control"
                   style="background-image: none;border-color: #a5a4a4;font-size: 12px;"
                   rows="2"
-                  placeholder="Describa alguna Observación del Score"
+                  placeholder="Describa algún comentario del Score"
                   formControlName="observacion">
                 </textarea>
               </div>
@@ -346,13 +339,23 @@
       </button>
 
       <ng-container *ngIf="DATA_SCORE">
-        <button
-           class="cli-btn btn-m btn-optional"
-           type="submit" (click)="close()">
-          <mat-icon class="icon-18">cancel</mat-icon> Observado
-        </button>
+        <ng-container *ngIf="authService.esUsuarioSolicitante()">
+          <button
+             class="cli-btn btn-m btn-sol-score"
+             type="submit" (click)="close()">
+            <mat-icon class="icon-18">credit_score</mat-icon> Solicitar Score
+          </button>
+        </ng-container>
 
         <ng-container *ngIf="authService.esUsuarioGestor()">
+          <button
+             class="cli-btn btn-m btn-optional"
+             type="submit" (click)="close()">
+            <mat-icon class="icon-18">cancel</mat-icon> Observado
+          </button>
+        </ng-container>
+
+        <ng-container *ngIf="authService.esUsuarioGestor() && scoreForm.controls['id_estado_m'].value == 3">
           <button
              class="cli-btn btn-m btn-mail"
              type="submit" (click)="close()">
