--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -78,6 +78,13 @@
   }
 }
 
+.btn-sol-score {
+  background-color: #FFF;
+  transition: ease 0.3s;
+  color: #0dcaf0;
+  border: solid 1px #0dcaf0;
+}
+
 // .info {
 //   align-items: center;
 //   justify-content: center;
